--- a/front/src/style/main.css
+++ b/front/src/style/main.css
@@ -6,12 +6,24 @@ body {
 }
 
 header {
-  background-color: #000;
-  color: #fff;
-  padding: 10px;
-  text-align: center;
-  font-size: 24px;
-  position: relative;
+  width: 100%;
+  padding: 35px 1% 35px;
+  background-color: #f8f9fa;
+  border-bottom: 3px solid #ccc;
+}
+
+header h1 {
+  margin: 0; padding: 0;
+  font-size: 25px;
+}
+
+header a {
+  text-decoration: none;
+  color: #4b4b4b;
+}
+
+header .title-Icon img {
+  width: 100px;
 }
 
 header .calendar-button {
@@ -19,12 +31,12 @@ header .calendar-button {
   border: none;
   position: absolute;
   right: 10px;
-  top: 10px;
+  top: 20px;
   cursor: pointer;
 }
 
 header .calendar-button img {
-  width: 30px;
+  width: 70px;
 }
 
 main {
@@ -32,8 +44,9 @@ main {
 }
 
 .section-title {
-  font-size: 18px;
+  font-size: 45px;
   margin-bottom: 10px;
+  font-weight: bold;
 }
 
 .site-list {
@@ -59,7 +72,7 @@ footer {
   color: #fff;
   text-align: center;
   padding: 10px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
 }
@@ -69,3 +82,4 @@ footer a {
   text-decoration: none;
   margin: 0 5px;
 }
+
